# pokedex

./: Cargo.toml  README.md
rest/: pokemon.http
src/: main.rs
src/api/: create_pokemon.rs  delete_pokemon.rs  fetch_all_pokemons.rs  fetch_pokemon.rs  health.rs  mod.rs  status_code.rs
src/cli/: create_pokemon.rs  delete_pokemon.rs  fetch_all_pokemons.rs  fetch_pokemon.rs  mod.rs
src/domain/: create_pokemon.rs  delete_pokemon.rs  entities.rs  fetch_all_pokemon.rs  fetch_all_pokemons.rs  fetch_pokemon.rs  mod.rs
src/repositories/: airtable_pokemon.rs  inmemory_pokemon.rs  mod.rs  pokemon.rs  sqlite_pokemon.rs
