[package]
name = "pokedex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3.2.1"
serde = { version = "1.0.137", features=["derive"]}
serde_json = "1.0.66"
clap = "2.33.4"
dialoguer = "0.8"
rusqlite = "0.27.0"
ureq = { version = "2.2.0", features = ["json"] }
